# auditwheel-emscripten

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
auditwheel_emscripten/: exports.py  imports.py  module.py  repair.py  show.py  wheel_utils.py
auditwheel_emscripten/cli/: main.py
test/: test_exports.py  test_function_type.py  test_imports.py  test_repair.py  test_show.py
